--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "prepare": "dts build",
     "size": "size-limit",
     "watch": "dts watch",
-    "test": "dts test --passWithNoTests"
+    "test": "dts test --passWithNoTests",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|gql|graphql|mdx|vue)\""
   },
   "husky": {
     "hooks": {
-      "pre-commit": "dts lint"
+      "pre-commit": "lint-staged"
     }
   },
   "prettier": {
@@ -61,6 +62,15 @@
     "react-dom": "^17.0.2",
     "size-limit": "^7.0.8",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "lint",
+      "pretty-quick — staged",
+      "git add"
+    ]
   }
 }
