--- a/example/package.json
+++ b/example/package.json
@@ -17,10 +17,14 @@
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4",
     "vite": "latest",
-    "vite-preset-react": "latest",
-    "typescript": "^4"
+    "vite-preset-react": "latest"
   }
 }
