--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
   "size-limit": [
     {
       "path": "dist/rtable.cjs.production.min.js",
-      "limit": "5 KB"
+      "limit": "10 KB"
     },
     {
       "path": "dist/rtable.esm.js",
-      "limit": "5 KB"
+      "limit": "10 KB"
     }
   ],
   "devDependencies": {
@@ -58,13 +58,13 @@
     "@types/react-dom": "^17.0.13",
     "dts-cli": "^1.4.0",
     "husky": "^7.0.4",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "size-limit": "^7.0.8",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2",
-    "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.3"
+    "typescript": "^4.6.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
