--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
+    "@tsconfig/create-react-app": "^1.0.2",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "autoprefixer": "^10.4.2",
