--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,9 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@reach/alert": "^0.16.0",
+    "@reach/dialog": "^0.16.2",
+    "@reach/tooltip": "^0.16.2",
     "react": "^18.0.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.0.0"
