--- a/example/package.json
+++ b/example/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@reach/alert": "^0.16.0",
     "@reach/dialog": "^0.16.2",
+    "@reach/portal": "^0.16.2",
     "@reach/tooltip": "^0.16.2",
-    "react": "^18.0.0",
+    "react": "rc",
     "react-app-polyfill": "^3.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "rc"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
