--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
     "@reach/dialog": "^0.16.2",
     "@reach/portal": "^0.16.2",
     "@reach/tooltip": "^0.16.2",
+    "@reach/visually-hidden": "^0.16.0",
     "react": "rc",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "rc"
